--- a/proxy.config.json
+++ b/proxy.config.json
@@ -2,5 +2,9 @@
     "/api": {
         "target": "http://127.0.0.1:8080",
         "secure": false
+    },
+    "/uploads": {
+        "target": "http://127.0.0.1:3000",
+        "secure": false
     }
 }
