--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
+    "templayed": "^0.2.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
